[package]
name = "rust_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
uuid = { version = "1.4", features = ["v4","serde"]}
chrono = { version = "0.4", features = ["serde"] }
utoipa = {version="3",features= ["actix_extras","chrono","uuid"] }
bcrypt = "0.15"
totp-rs = {version = "5", features = ["serde_support","qr","gen_secret"]}
jsonwebtoken = "8"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
