[package]
name = "rust_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
uuid = { version = "1.4", features = ["v4","serde"]}
chrono = { version = "0.4", features = ["serde"] }
utoipa = {version="3",features= ["actix_extras","chrono","uuid"] }
bcrypt = "0.15"
totp-rs = {version = "5", features = ["serde_support","qr","gen_secret"]}
jsonwebtoken = "8"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
opentelemetry = { version = "0.20", features = ["rt-tokio-current-thread"] }
tracing = "0.1.37"
async-trait = "0.1.73"
tokio-postgres = { version = "0.7", features = ["with-uuid-1","with-chrono-0_4","with-serde_json-1"] }
deadpool-postgres = { version = "0.10", features = ["serde"]}
openssl = { version = "0.10", features = ["vendored"]}
postgres-openssl = "0.5.0"
toml = "0.7.6"
serial_test = "2.0.0"
